tests/vertical-slice/reject/gen_fn_capture_owned_value.hew
// Reject fixture: gen_fn_capture_owned_value — a generator that captures an
// owned (non-BitCopy) value as a free variable must fail closed at MIR lowering.
//
// The generator's env is a flat `memcpy` of the capture record into the coro
// companion's heap env block. Owned values (like `string`) hold
// heap-allocated state with a unique owner; shallow-copying them aliases the
// caller's heap, causing a double-free or use-after-free when either side is
// dropped. The generator capture gate must therefore reject any value that
// is not plain BitCopy (no heap ownership, no drop requirement).
//
// This fixture tests the primary scalar owned type: `string`. The same gate
// rejects `Vec<T>`, `HashMap<K, V>`, and other heap-owning values.
//
// Harness verb: hew check
// Expected: rejected, fail closed (capture of opaque/owned value into a
// generator); diagnostic cites the NYI capture protocol.
//
// Error count: exactly 1 — the root NotYetImplemented. The inadmissible
// capture's binding id is poisoned in `lower_gen_block`, so the synthetic body
// emits neither the InitialisedBeforeUse nor the UnresolvedPlace cascade
// secondary; only the actionable root rejection surfaces.
gen fn drain(s: string) -> i64 {
    yield s.len();
}

fn main() {
    let name = "hello";
    for n in drain(name) {
        println(n);
    }
}
